--- a/.github/workflows/snowflake-devops-demo.yml
+++ b/.github/workflows/snowflake-devops-demo.yml
@@ -40,4 +40,12 @@ jobs:
           pip install schemachange
           
           echo "Step 2: Running schemachange"
-          schemachange -f $GITHUB_WORKSPACE/migrations -a $SF_ACCOUNT -u $SF_USERNAME -r $SF_ROLE -w $SF_WAREHOUSE -d $SF_DATABASE -c $SF_DATABASE.SCHEMACHANGE.CHANGE_HISTORY --create-change-history-table
+          schemachange \
+            --root-folder $GITHUB_WORKSPACE/migrations \
+            --snowflake-account $SF_ACCOUNT \
+            --snowflake-user $SF_USERNAME \
+            --snowflake-role $SF_ROLE \
+            --snowflake-warehouse $SF_WAREHOUSE \
+            --snowflake-database $SF_DATABASE \
+            --change-history-table $SF_DATABASE.SCHEMACHANGE.CHANGE_HISTORY \
+            --create-change-history-table
